fix(nav, testimonials): adjust layout and alignment for better responsiveness

--- a/src/app/features/nav/nav.component.scss
+++ b/src/app/features/nav/nav.component.scss
@@ -11,7 +11,8 @@
   &__container {
     align-items: center;
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    gap: 1rem;
+    grid-template-columns: auto 1fr auto;
     margin: 0 auto;
     max-width: 1280px;
     padding: 0.875rem 1rem;
@@ -21,6 +22,7 @@
     align-items: center;
     cursor: pointer;
     display: flex;
+    justify-self: start;
     text-decoration: none;
 
     &-img {
@@ -38,6 +40,7 @@
   &__links {
     display: none;
     gap: 2rem;
+    justify-self: center;
 
     @media (min-width: 768px) {
       align-items: center;
@@ -282,6 +285,7 @@
   &__mobile-lang {
     display: flex;
     gap: 0.5rem;
+    justify-content: center;
     margin-top: 1rem;
   }
 
